[package]
name = "threadcell"
version = "0.9.0"
edition = "2021"
authors = ["Christian Thäter <ct@pipapo.org>"]
description = "A cell whose value can only be accessed by a owning thread"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/threadcell.git"
keywords = ["cell", "global", "static", "cooperative"]
categories = ["concurrency"]

[dependencies]
mutants = "0.0.3"
