[package]
name = "threadcell"
version = "1.0.2"
edition = "2021"
authors = ["Christian Thäter <ct@pipapo.org>"]
description = "A cell whose value can only be accessed by a owning thread"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/threadcell.git"
keywords = ["cell", "global", "static", "cooperative"]
categories = ["concurrency"]

[features]
default = []

# unstable features from nightly, probed with conf_test
nightly_thread_id_value  = []

[dependencies]
mutants = "0.0.3"

[build-dependencies]
conf_test = "0.5"

