[package]
name = "threadcell"
version = "1.0.3"
edition = "2021"
authors = ["Christian Thäter <ct@pipapo.org>"]
description = "A cell whose value can only be accessed by a owning thread"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/threadcell.git"
keywords = ["cell", "global", "static", "cooperative"]
categories = ["concurrency"]

[features]
default = []

# enable to use nightly features
nightly = ["nightly_thread_id_value"]

# unstable features from nightly
nightly_thread_id_value  = []

[dependencies]
mutants = "0.0.3"

